# local-ai-packaged

./: .dockerignore  .env.backup.20250910_110945  .env.backup.20250910_192411  .env.backup.20250910_193013  .env.backup.20250911_092009  .env.backup.20250927_172909  .env.backup.integration.20250927_203316  .env.backup.test.20250927_202811  .env.before-jwt-fix  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  ACCESS_SECURITY_REPORT.md  ACCESS_SUMMARY.md  AGENTS.md  ALL_SERVICES_CONFIGURED.md  BITWARDEN_AI_AGENT_GUIDE.md  BITWARDEN_SETUP.md  BITWARDEN_SUCCESS.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CURRENT_STATUS.md  Caddyfile  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  DIFF_20250914_044937.md  DIFF_20250914_044955.md  DIFF_20250914_070440.md  DIFF_20250914_071811.md  DOCKER_FIXES.md  ENV_VARIABLES_RULES.md  FINAL_STATUS_REPORT.md  FINAL_VERIFICATION_ALL_SERVICES.md  FULLY_OPERATIONAL.md  GEMINI.md  INTEGRATION_TEST_REPORT_20250927_203317.md  MCP_SERVERS_GUIDE.md  Makefile  PROJECT_STATUS.md  (+75 more)
.github/: CODEOWNERS  coderabbit.yml  copilot-instructions.md  labeler.yml  pull_request_template.md
.github/instructions/: cbw-instructions.instructions.md
.github/workflows/: README.md  add-to-project.yml  ci-cd.yml  ci.yml  data-pipeline.yml  deploy-with-bitwarden.yml  docker.yml  stale.yml  static-deploy.yml  todo-to-issue.yml
.trunk/: trunk.yaml
agentic-knowledge-rag-graph/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
ansible/: site.yml
ansible/group_vars/: all.yml
codeql-custom-queries-javascript/: codeql-pack.yml
config/: .env.backup.20250910_112924  .env.backup.20250910_143905  Caddyfile  __init__.py  docker-compose.override.ai-tools.yml  mcp-linear-updater.json  mcp-servers.json
dashboard/: Dockerfile  README.md  next.config.js  package-lock.json  package.json
data/: government-sources.yaml
db/: __init__.py  models.py  models_updated.py
db/migrations/: 001_initial_schema.sql  002_add_task_queue.py
deploy/: config.example.json  master.sh  utils.sh
docs/: AI_TOOLS_README.md  BITWARDEN_INSTALLATION_GUIDE.md  CLOUDFLARE_DEPLOYMENT.md  COMPREHENSIVE-REPOSITORY-DOCUMENTATION.md  DOCUMENTATION-WEBSITE-PROPOSAL.md  FRONTEND_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INGESTION_GUIDE.md  MCP_INTEGRATION.md  POLITICAL_DOCUMENT_ANALYSIS.md  PROCEDURES.md  QUEUE_SYSTEM.md  QUICK_START.md  TESTING_GUIDE.md  agents.md  ai-agent-instructions.md  comprehensive_analysis_queries.sql  database_schema_and_queries.md  deployment.md  docker-optimization-plan.md  errors.md  incremental-deployment.md  legislative_analysis_queries.sql  project-update-and-docker-review.md  rules-overview.md  secrets-setup.md  services.md  table_relationships.py  workflows.md
docs-website/: .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
docs-website/scripts/: generate_docs.py
frontend/: Dockerfile  docker-compose.yml  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/__tests__/: deployment.test.js  dummy.test.js  setupTests.js
local-ai-packaged/: .env.example  .env.sample  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-full.yml  docker-compose.override.private.yml  docker-compose.yml  main.py  playwright.config.ts  providers.md  requirements.txt  sample_bill.txt  site.yml  tasks.md
local-ai-packaged/agentic-knowledge-rag-graph/: main.py  pyproject.toml  query.py  requirements.txt
local-ai-packaged/agentic-knowledge-rag-graph/tests/: test_rag.py
local-ai-packaged/ansible/: inventory.ini  site.yml
local-ai-packaged/docs/: transition-plan.md
local-ai-packaged/frontend/: Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json
local-ai-packaged/k8s/: backend-deployment.yaml  frontend-deployment.yaml
local-ai-packaged/n8n/: ingestion_workflow.json
local-ai-packaged/rag/: ingestion.py
local-ai-packaged/scripts/: generate-secrets.sh  health-check.sh  launch_agentic-rag.sh  launch_frontend.sh  launch_n8n.sh  launch_neo4j.sh  launch_ollama.sh  launch_qdrant.sh  (+3 more)
logs/: .gitkeep  diagnostics_20250827_041449.json  diagnostics_20250827_042155.json
models/: __init__.py
project_backup/: backup_info.txt  current_services.txt
prompts/: ai-development.yaml  github-copilot.yaml  government-analysis.yaml  llm-inference.yaml
reports/: docker_status.py  network_monitor.py  system_health.py  trivy-scan.md  troubleshooting_memory.json  troubleshooting_memory_bank.py  yaml_validate.py
scripts/: backup-restore-enhanced.sh  backup-restore.sh  complete-integration-test.sh  data_pipeline.py  demo_analysis.py  deploy-legislative-ai.sh  deploy-production.sh  enhanced-generate-secrets.sh  enhanced-populate-env-from-bitwarden.sh  enhanced-validate-env.sh  enhanced_government_ingestion.py  fix-jwt-problem.sh  generate-secrets.sh  generate_reports.py  government-data-ingestion.py  health-check.sh  incremental-deployment.sh  ingest_government_data.py  ingest_govinfo_data.py  launch_agentic-rag.sh  launch_frontend.sh  launch_n8n.sh  launch_neo4j.sh  launch_ollama.sh  launch_postgres.sh  launch_qdrant.sh  migrate-secrets-to-bitwarden.sh  one-click-installer.sh  populate-env-from-bitwarden.sh  populate_secrets.py  port-conflict-resolver.sh  register_api_keys.py  requirements-graph-test.txt  run-tests.py  setup-mcp-env.sh  setup_database_indexes.py  setup_env.sh  start-all-services.sh  start_services.py  test-bitwarden-integration.sh  (+6 more)
tests/: README.md  TESTING_FRAMEWORK.md  conftest.py  generate_test_data.py  gov_apis.py  requirements.txt  test_ai_services.py  test_config_validation.py  test_deployment.py  test_deployment_integration.py  test_docker_compose.py  test_jest_frontend.js  test_secrets.py  test_smoke.py  test_terraform.py  test_utils.py
tools/: config-manager.py  fetch_secrets.py  port-manager.py  service-manager.py  service_orchestrator.py  validate_service_communication.py
traefik/: Dockerfile  docker-compose.traefik.yml  entrypoint.sh  install-plugins.sh  setup-env.sh  update-env.sh
(+153 files in other folders)
